--- a/src/main/resources/assets/itemwallet/lang/ru_ru.json
+++ b/src/main/resources/assets/itemwallet/lang/ru_ru.json
@@ -4,7 +4,7 @@
 
   "itemwallet.config.enableMod": "Включить мод",
   "itemwallet.config.simpleMode": "Простой режим",
-  "itemwallet.tooltip.simpleMode": "Если включено, будет показывать счётчики раздельно без плашки.\n\nПо умолчанию встроено в интерфейс, однако, если что-либо наезжает друг на друга \nили выглядит некрасиво, то вы можете настроить положение\n счётчиков предпоследней функцией в конфиге.",
+  "itemwallet.tooltip.simpleMode": "Если включено, будет показывать счётчики раздельно без плашки.\n\nПо умолчанию встроено в интерфейс, однако,\nесли что-либо наезжает друг на друга\nили выглядит некрасиво, то вы можете настроить положение\nсчётчиков предпоследней функцией в конфиге.",
   "itemwallet.config.isCountInStacks": "Считать в стаках",
   "itemwallet.config.isCountInBlocks": "Считать в блоках",
   "itemwallet.config.walletItem": "Основная валюта",
@@ -17,6 +17,6 @@
   "itemwallet.config.select_color": "Цвет выделения",
   "itemwallet.config.select_alpha": "Непрозрачность выделения",
   "itemwallet.config.editorMode": "Режим редактирования положения счётчиков",
-  "itemwallet.tooltip.editorMode": "Включает возможность перемещать счётчики.\n\nДля этого необходимо нажать ЛКМ на иконку счётчика и, \nпереместив счётчик стрелками в нужное место, нажать Enter, \nчтобы сохранить, или Esc, чтобы сбросить.",
+  "itemwallet.tooltip.editorMode": "Включает возможность перемещать счётчики.\n\nДля этого необходимо нажать ЛКМ на иконку счётчика и,\nпереместив счётчик стрелками в нужное место, нажать Enter,\nчтобы сохранить, или Esc, чтобы сбросить.",
   "itemwallet.config.coordsReset": "Сбросить положения счётчиков"
 }
