--- a/src/main/resources/assets/itemwallet/lang/en_us.json
+++ b/src/main/resources/assets/itemwallet/lang/en_us.json
@@ -17,5 +17,9 @@
   "itemwallet.config.select_alpha": "Highlight Opacity",
   "itemwallet.config.editorMode": "Counters Edit Mode",
   "itemwallet.tooltip.editorMode": "Toggles the capability to move counters.\n\nTo do this, you need to hit the counter icon with LMB and move\nthe counter with the arrows to the right place,\nthen press Enter to save or Esc to reset.",
-  "itemwallet.config.coordsReset": "Restore Default Positions"
+  "itemwallet.config.coordsReset": "Restore Default Positions",
+
+  "itemwallet.config.generalCategory": "General",
+  "itemwallet.config.selectCategory": "Selection",
+  "itemwallet.config.keysCategory": "Keybinds"
 }
